--- a/package.json
+++ b/package.json
@@ -3,27 +3,19 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "@tailwindcss/forms": "^0.3.3",
-      "axios": "^0.21.1",
-      "bcryptjs": "^2.4.3",
-      "mongodb": "^3.6.9",
-      "next": "11.0.1",
-      "next-auth": "^3.27.3",
-      "react": "17.0.2",
-      "react-dom": "17.0.2"
-    },
-    "devDependencies": {
-      "autoprefixer": "^10.2.6",
-      "eslint": "7.29.0",
-      "eslint-config-next": "11.0.1",
-      "postcss": "^8.3.5",
-      "tailwindcss": "^2.2.4"
+        "@tailwindcss/forms": "^0.5.7",
+        "axios": "^1.7.4",
+        "bcryptjs": "^2.4.3",
+        "mongodb": "^6.8.0",
+        "next": "^14.2.5",
+        "next-auth": "^4.24.7",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
-  }
-  
+}
